--- a/.github/workflows/triton-pascal-2.3.1.yml
+++ b/.github/workflows/triton-pascal-2.3.1.yml
@@ -43,4 +43,8 @@ jobs:
           prefix: triton_pascal-2.3.1-
 
 on:
+  push:
+    paths:
+      - patches/triton_pascal/2.3.1/**
+
   workflow_dispatch:
