--- a/.github/workflows/triton-pascal-2.3.0.yml
+++ b/.github/workflows/triton-pascal-2.3.0.yml
@@ -45,6 +45,8 @@ jobs:
 on:
   push:
     paths:
+      - .github/actions/build-triton/**
+      - .github/workflows/triton-pascal-2.3.0.yml
       - patches/triton_pascal/2.3.0/**
 
   workflow_dispatch:
