--- a/.github/workflows/triton-pascal-3.0.0.yml
+++ b/.github/workflows/triton-pascal-3.0.0.yml
@@ -44,6 +44,8 @@ jobs:
 on:
   push:
     paths:
+      - .github/actions/build-triton/**
+      - .github/workflows/triton-pascal-3.0.0.yml
       - patches/triton_pascal/3.0.0/**
 
   workflow_dispatch:
