--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -104,6 +104,10 @@ jobs:
         uses: actions/deploy-pages@v4
 
 on:
+  push:
+    paths:
+      - .github/workflows/update-index.yml
+
   schedule:
     - cron: "30 7 * * *"
 
