--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -24,6 +24,9 @@ inputs:
 runs:
   using: "composite"
 
+  env:
+    SCCACHE_GHA_ENABLED: true
+
   steps:
     - name: Normalize wheel name
       shell: bash
@@ -54,18 +57,27 @@ runs:
       shell: bash
       run: echo "SOURCE_DATE_EPOCH=$(git log -1 --format=%ct)" | tee "$GITHUB_ENV"
 
+    - name: Install sccache
+      uses: mozilla-actions/sccache-action@v0.0.5
+
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.18.0
       with:
         package-dir: ${{ env.WHEEL_NAME }}
       env:
+        CIBW_BEFORE_ALL_LINUX: .github/actions/build-vllm/before_all.sh
+        CIBW_BEFORE_TEST_LINUX: sccache --show-stats
         CIBW_BUILD: cp38-manylinux_x86_64
         CIBW_ENVIRONMENT: >
           CMAKE_BUILD_TYPE=Release
+          MAX_JOBS=3
+        CIBW_ENVIRONMENT_PASS_LINUX: >
+          ACTIONS_CACHE_URL
+          ACTIONS_RUNTIME_TOKEN
+          SCCACHE_GHA_ENABLED
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_MANYLINUX_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_REPAIR_WHEEL_COMMAND: ~
-        MAX_JOBS: 2
         SOURCE_DATE_EPOCH: ${{ env.SOURCE_DATE_EPOCH }}
 
     - name: Repackage wheels
