--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -66,7 +66,7 @@ runs:
       with:
         package-dir: ${{ env.WHEEL_NAME }}
       env:
-        CIBW_BEFORE_ALL_LINUX: cp /host/opt/hostedtoolcache/sccache/*/*/sccache /usr/local/bin
+        CIBW_BEFORE_ALL_LINUX: cp /host/opt/hostedtoolcache/sccache/*/*/sccache /usr/local/bin && sccache --show-stats
         CIBW_BEFORE_TEST_LINUX: sccache --show-stats
         CIBW_BUILD: cp38-manylinux_x86_64
         CIBW_ENVIRONMENT: >
