--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -66,15 +66,16 @@ runs:
       with:
         package-dir: ${{ env.WHEEL_NAME }}
       env:
-        CIBW_BEFORE_ALL_LINUX: cp /host/opt/hostedtoolcache/sccache/*/*/sccache /usr/local/bin && sccache --show-stats
+        CIBW_BEFORE_ALL_LINUX: cp /host/opt/hostedtoolcache/sccache/*/*/sccache /usr/local/bin && SCCACHE_ERROR_LOG=/dev/stdout SCCACHE_LOG=debug SCCACHE_START_SERVER=1 sccache && sccache --show-stats
         CIBW_BEFORE_TEST_LINUX: sccache --show-stats
         CIBW_BUILD: cp38-manylinux_x86_64
+        CIBW_BUILD_VERBOSITY: 1
         CIBW_ENVIRONMENT: >
           CMAKE_BUILD_TYPE=Release
           CMAKE_C_COMPILER_LAUNCHER=sccache
           CMAKE_CUDA_COMPILER_LAUNCHER=sccache
           CMAKE_CXX_COMPILER_LAUNCHER=sccache
-          MAX_JOBS=3
+          MAX_JOBS=2
         CIBW_ENVIRONMENT_PASS_LINUX: >
           ACTIONS_CACHE_URL
           ACTIONS_RUNTIME_TOKEN
