--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -66,8 +66,7 @@ runs:
       with:
         package-dir: ${{ env.WHEEL_NAME }}
       env:
-        CIBW_BEFORE_ALL_LINUX: cp /host/opt/hostedtoolcache/sccache/*/*/sccache /usr/local/bin && SCCACHE_ERROR_LOG=/dev/stdout SCCACHE_LOG=debug SCCACHE_START_SERVER=1 sccache && sccache --show-stats
-        CIBW_BEFORE_TEST_LINUX: sccache --show-stats
+        CIBW_BEFORE_ALL_LINUX: .github/actions/build-vllm/before_all.sh
         CIBW_BUILD: cp38-manylinux_x86_64
         CIBW_BUILD_VERBOSITY: 1
         CIBW_ENVIRONMENT: >
