--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -64,10 +64,11 @@ runs:
         package-dir: ${{ env.WHEEL_NAME }}/python
       env:
         CIBW_BUILD: cp${{ inputs.python_version }}-manylinux_x86_64
+        CIBW_BUILD_VERBOSITY: 1
+        CIBW_ENVIRONMENT: >
+          TORCH_CUDA_ARCH_LIST=6.0 6.1
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: quay.io/pypa/manylinux2014_x86_64:latest
         CIBW_MANYLINUX_X86_64_IMAGE: quay.io/pypa/manylinux2014_x86_64:latest
-        SOURCE_DATE_EPOCH: ${{ env.SOURCE_DATE_EPOCH }}
-        TORCH_CUDA_ARCH_LIST: "6.0 6.1"
 
     - name: Repackage wheels
       uses: ./.github/actions/repackage-wheels
