--- a/.github/actions/setup-build-cache/action.yml
+++ b/.github/actions/setup-build-cache/action.yml
@@ -23,3 +23,8 @@ runs:
 
     - name: Install sccache
       uses: mozilla-actions/sccache-action@v0.0.5
+
+    - if: always()
+      name: Debug
+      shell: bash
+      run: ls -la / && ls -la /sccache
