--- a/.github/actions/setup-build-cache/action.yml
+++ b/.github/actions/setup-build-cache/action.yml
@@ -16,13 +16,12 @@ runs:
         save-always: true
 
         path: |
-          /root/.cache/pip
+          ~/.cache/pip
 
     - name: Set sccache environment variables
       shell: bash
       run: |
         echo "SCCACHE_GHA_ENABLED=1" | tee "$GITHUB_ENV"
-        echo "SCCACHE_DIR=/sccache" | tee "$GITHUB_ENV"
         echo "SCCACHE_DIRECT=1" | tee "$GITHUB_ENV"
 
     - name: Install sccache
