--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -71,13 +71,12 @@ runs:
         CIBW_BEFORE_ALL_LINUX: .github/actions/setup-build-cache/before_all.sh
         CIBW_BUILD: cp${{ inputs.python_version }}-manylinux_x86_64
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_CONTAINER_ENGINE: "docker; create_args: --volume /root/.cache:/root/.cache:rw --volume /sccache:/sccache:rw"
+        CIBW_CONTAINER_ENGINE: "docker; create_args: --volume /home/runner/.cache:/root/.cache:rw
         CIBW_ENVIRONMENT: >
           TORCH_CUDA_ARCH_LIST=6.1
         CIBW_ENVIRONMENT_PASS_LINUX: >
           ACTIONS_CACHE_URL
           ACTIONS_RUNTIME_TOKEN
-          SCCACHE_DIR
           SCCACHE_DIRECT
           SCCACHE_GHA_ENABLED
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: quay.io/pypa/manylinux2014_x86_64:latest
