(setup-build-cache) Fixes

--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -67,7 +67,7 @@ runs:
         CIBW_BEFORE_ALL_LINUX: .github/actions/setup-build-cache/before_all.sh
         CIBW_BUILD: cp38-manylinux_x86_64
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_CONTAINER_ENGINE: "docker; create_args: --volume /home/runner/.cache:/root/.cache:rw"
+        CIBW_CONTAINER_ENGINE: "docker; create_args: --net host --volume /home/runner/.cache:/root/.cache:rw"
         CIBW_ENVIRONMENT: >
           CMAKE_BUILD_TYPE=Release
           MAX_JOBS=3
@@ -79,11 +79,6 @@ runs:
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_MANYLINUX_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_REPAIR_WHEEL_COMMAND: ~
-
-    - if: always()
-      name: Debug
-      shell: bash
-      run: ls -la ~/.cache && ls -la ~/.cache/sccache
 
     - name: Repackage wheels
       uses: ./.github/actions/repackage-wheels
