--- a/.github/actions/setup-build-cache/action.yml
+++ b/.github/actions/setup-build-cache/action.yml
@@ -9,9 +9,9 @@ runs:
   using: "composite"
 
   steps:
-    - name: Change owner of ~/.cache
+    - name: Create cache directory
       shell: bash
-      run: sudo chown --recursive root:root ~/.cache
+      run: sudo mkdir -p /home/runner/.cache && sudo chown --recursive root:root /home/runner/.cache
 
     - name: Setup cache
       uses: actions/cache@v4
