--- a/.github/actions/setup-build-cache/action.yml
+++ b/.github/actions/setup-build-cache/action.yml
@@ -32,6 +32,6 @@ runs:
     - name: Install sccache
       uses: mozilla-actions/sccache-action@v0.0.5
 
-    - name: Start sscache server
+    - name: Start sccache server
       shell: bash
-      run: sscache --start-server
+      run: sccache --start-server
