--- a/.github/actions/build-vllm/action.yml
+++ b/.github/actions/build-vllm/action.yml
@@ -56,8 +56,6 @@ runs:
 
     - name: Setup build cache
       uses: ./.github/actions/setup-build-cache
-      with:
-        key: build-vllm
 
     - name: Build wheels
       uses: pypa/cibuildwheel@v2.18.0
@@ -67,7 +65,6 @@ runs:
         CIBW_BEFORE_ALL_LINUX: .github/actions/setup-build-cache/before_all.sh
         CIBW_BUILD: cp38-manylinux_x86_64
         CIBW_BUILD_VERBOSITY: 1
-        CIBW_CONTAINER_ENGINE: "docker; create_args: --net host --volume /home/runner/.cache:/root/.cache:rw"
         CIBW_ENVIRONMENT: >
           CMAKE_BUILD_TYPE=Release
           MAX_JOBS=3
@@ -79,6 +76,7 @@ runs:
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_MANYLINUX_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_REPAIR_WHEEL_COMMAND: ~
+        CIBW_TEST_COMMAND_LINUX: .github/actions/setup-build-cache/before_test.sh
 
     - name: Repackage wheels
       uses: ./.github/actions/repackage-wheels
