(actions) Minor fixes [skip ci]

--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -82,7 +82,7 @@ runs:
       uses: ./.github/actions/repackage-wheels
       with:
         name: ${{ env.WHEEL_NAME }}
-        version: ${{ inputs.wheel_version }}
+        version: ${{ inputs.version }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
