--- a/.github/actions/build-triton/action.yml
+++ b/.github/actions/build-triton/action.yml
@@ -68,7 +68,7 @@ runs:
       uses: ./.github/actions/repackage-wheels
       with:
         name: ${{ env.WHEEL_NAME }}
-        version: ${{ inputs.wheel_version }}
+        version: ${{ inputs.version }}
 
     - name: Upload artifact
       uses: actions/upload-artifact@v4
