--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -76,6 +76,8 @@ runs:
           ACTIONS_RUNTIME_TOKEN
           SCCACHE_DIRECT
           SCCACHE_GHA_ENABLED
+        CIBW_MANYLINUX_PYPY_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
+        CIBW_MANYLINUX_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_TEST_COMMAND_LINUX: .github/actions/setup-build-cache/before_test.sh
 
     - name: Repackage wheels
