--- a/.github/workflows/flashinfer-pascal-0.1.6.yml
+++ b/.github/workflows/flashinfer-pascal-0.1.6.yml
@@ -12,9 +12,9 @@ jobs:
         uses: ./.github/actions/build-flashinfer
         with:
           name: flashinfer-pascal
-          patches_version: 0.1.6
           python_version: ${{ matrix.python_version }}
-          ref: v0.1.6
+          ref: pascal-support
+          repository: sasha0552/flashinfer
 
     strategy:
       matrix:
