--- a/.github/actions/setup-build-cache/action.yml
+++ b/.github/actions/setup-build-cache/action.yml
@@ -12,3 +12,24 @@ runs:
 
     - name: Install sccache
       uses: mozilla-actions/sccache-action@v0.0.5
+
+    - name: Install fake sccache
+      shell: bash
+      run: |
+        cat << "EOF" | install /dev/stdin /usr/local/bin/sccache
+        #!/bin/sh -e
+
+        if [ $# -eq 1 ] && [ "$1" = "--show-stats" ]; then
+          exec cat /tmp/sccache_stats.txt
+        fi
+
+        if [ $# -eq 2 ] && [ "$1" = "--show-stats" ] && [ "$2" = "--stats-format=json" ]; then
+          exec cat /tmp/sccache_stats.json
+        fi
+
+        exit 1
+        EOF
+
+    - name: Debug
+      shell: bash
+      run: echo "===== DEBUG =====" && which sccache && echo "===== DEBUG ====="
