(setup-build-cache) Fixes

--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -67,7 +67,7 @@ runs:
       with:
         package-dir: ${{ env.WHEEL_NAME }}/python
       env:
-        CIBW_BEFORE_ALL_LINUX: .github/actions/setup-build-cache/before_all.sh --symlinks
+        CIBW_BEFORE_ALL_LINUX: .github/actions/setup-build-cache/before_all.sh --wrap
         CIBW_BUILD: cp${{ inputs.python_version }}-manylinux_x86_64
         CIBW_BUILD_FRONTEND: build
         CIBW_BUILD_VERBOSITY: 1
