(flashinfer) Do not repair wheel

--- a/.github/actions/build-flashinfer/action.yml
+++ b/.github/actions/build-flashinfer/action.yml
@@ -80,6 +80,7 @@ runs:
           SCCACHE_GHA_ENABLED
         CIBW_MANYLINUX_PYPY_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
         CIBW_MANYLINUX_X86_64_IMAGE: ghcr.io/sasha0552/manylinux2014_x86_64-cuda:latest
+        CIBW_REPAIR_WHEEL_COMMAND: ~
 
     - name: Repackage wheels
       uses: ./.github/actions/repackage-wheels
