--- a/.github/actions/distributed/sccache-client/action.yml
+++ b/.github/actions/distributed/sccache-client/action.yml
@@ -4,19 +4,13 @@ runs:
   using: "composite"
 
   steps:
-    - name: Cleanup
-      uses: ./.github/actions/runner-cleanup
-
     - name: Execute `tailscale` command
       shell: bash
       run: scripts/tailscale.sh up --authkey=$TS_AUTH_KEY --hostname=$TS_HOSTNAME --ssh
 
-    - name: Invoke `sccache` action
-      uses: mozilla-actions/sccache-action@v0.0.5
-
-    - name: Install `sccache`
+    - name: Install `sccache-dist`
       shell: bash
-      run: scripts/sccache.sh
+      run: scripts/sccache_dist.sh
 
     - name: Start `sccache-dist scheduler`
       shell: bash
