--- a/.github/workflows/flashinfer-distributed.yml
+++ b/.github/workflows/flashinfer-distributed.yml
@@ -17,6 +17,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       SCCACHE_DIST_SCHEDULER_URL: http://ppc-${{ needs.configure.outputs.random }}-client:10600
       SCCACHE_GHA_ENABLED: 1
       TS_AUTH_KEY: ${{ secrets.TS_AUTH_KEY }}
