--- a/.github/actions/distributed/build-vllm/action.yml
+++ b/.github/actions/distributed/build-vllm/action.yml
@@ -42,9 +42,9 @@ runs:
         tags: ghcr.io/${{ github.repository }}/vllm:${{ inputs.ref }}
 
         build-args: |
-          ACTIONS_CACHE_URL=${{ ACTIONS_CACHE_URL }}
+          ACTIONS_CACHE_URL=${{ env.ACTIONS_CACHE_URL }}
           ACTIONS_RUNTIME_TOKEN=${{ env.ACTIONS_RUNTIME_TOKEN }}
-          SCCACHE_DIST_SCHEDULER_URL=${{ SCCACHE_DIST_SCHEDULER_URL }}
+          SCCACHE_DIST_SCHEDULER_URL=${{ env.SCCACHE_DIST_SCHEDULER_URL }}
           SCCACHE_GHA_ENABLED=1
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
           max_jobs=80
