--- a/.github/actions/distributed/build-vllm/action.yml
+++ b/.github/actions/distributed/build-vllm/action.yml
@@ -33,6 +33,13 @@ runs:
         registry: ghcr.io
         username: ${{ github.actor }}
 
+    - name: Expose ACTIONS_CACHE_URL and ACTIONS_RUNTIME_TOKEN
+      uses: actions/github-script@v7
+      with:
+        script: |
+          core.exportVariable("ACTIONS_CACHE_URL", process.env["ACTIONS_CACHE_URL"])
+          core.exportVariable("ACTIONS_RUNTIME_TOKEN", process.env["ACTIONS_RUNTIME_TOKEN"])
+
     - name: Build and push
       uses: docker/build-push-action@v6
       with:
@@ -46,5 +53,6 @@ runs:
           ACTIONS_RUNTIME_TOKEN=${{ env.ACTIONS_RUNTIME_TOKEN }}
           SCCACHE_DIST_SCHEDULER_URL=${{ env.SCCACHE_DIST_SCHEDULER_URL }}
           SCCACHE_GHA_ENABLED=1
+          USE_SCCACHE=1
           torch_cuda_arch_list=6.0 6.1 7.0 7.5 8.0 8.6 8.9 9.0+PTX
           max_jobs=80
