fix docker & tailscale dns integration

--- a/.github/actions/distributed/sccache-client/action.yml
+++ b/.github/actions/distributed/sccache-client/action.yml
@@ -8,6 +8,10 @@ runs:
       shell: bash
       run: scripts/tailscale.sh up --authkey=$TS_AUTH_KEY --hostname=$TS_HOSTNAME --ssh
 
+    - name: Configure Docker daemon
+      shell: bash
+      run: scripts/tailscale_docker.sh
+
     - name: Install `sccache-dist`
       shell: bash
       run: scripts/sccache_dist.sh
